[gd_scene load_steps=5 format=3 uid="uid://1w2v0knmlfoj"]

[ext_resource type="Script" path="res://Scripts/PlayerMovement.gd" id="1_dki0j"]
[ext_resource type="Texture2D" uid="uid://dvrkyqr4n8xh3" path="res://Assets/idlesprite.png" id="2_lfre7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ycf1b"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pco1h"]
radius = 32.0624

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
position = Vector2(1, 2)
script = ExtResource("1_dki0j")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(307, 159)
scale = Vector2(0.160933, 0.156223)
texture = ExtResource("2_lfre7")

[node name="Camera2D" type="Camera2D" parent="."]
y_sort_enabled = true
position = Vector2(278, 165)
zoom = Vector2(2, 2)
limit_left = 2
limit_top = 0
limit_right = 1152
limit_bottom = 671

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(278, 170)
shape = SubResource("CircleShape2D_ycf1b")
one_way_collision_margin = 0.0

[node name="Interaction Components" type="Node2D" parent="."]
z_index = 2
position = Vector2(279, 160)

[node name="InteractLabel" type="Label" parent="Interaction Components"]
offset_left = -95.0
offset_top = -22.0
offset_right = 134.0
offset_bottom = 5.0
theme_override_font_sizes/font_size = 10
text = "(E)"
horizontal_alignment = 1

[node name="InteractionArea" type="Area2D" parent="Interaction Components"]
position = Vector2(0, -1)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Components/InteractionArea"]
position = Vector2(-2, -2)
shape = SubResource("CircleShape2D_pco1h")

[connection signal="area_entered" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Components/InteractionArea" to="." method="_on_interaction_area_area_exited"]
